[gd_scene load_steps=2 format=3 uid="uid://c0l75fsf0a0lh"]

[ext_resource type="Script" path="res://scripts/ui/health_bar.gd" id="1_script"]

[node name="HealthBar" type="Control"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "100/100"
horizontal_alignment = 1

[node name="BlockBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="BlockLabel" type="Label" parent="VBoxContainer/BlockBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "100/100"
horizontal_alignment = 1

[node name="BuffContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4
